--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-  <head></head>
-  <title>Vishakaa Satheeshkumar</title>
+  <head>
+    <title>Vishakaa Satheeshkumar</title>
+  </head>
 
   <body>
   Hello World
