--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<!doctype html>
 <html>
   <head>
     <title>Vishakaa Satheeshkumar</title>
   </head>
 
   <body>
-    Hello World! This is <b>bold</b>
-    <a href="http://google.com">google.com</a>
+    <h1>Hi there! I'm Vishakaa Satheeshkumar</h1><br>
+    <h2>
+      Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.<br>
+      Over the next four months before I head off into my second year, I decided to learn how to program my own website using <strong>HTML, CSS, and Javascript</strong>.
+    </h2>
+    
+    
   </body>
 </html>
