--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   </head>
 
   <body>
-    <h1>Hi there! I'm Vishakaa Satheeshkumar</h1><br>
-    <h2>
+    <h1>Hi there! I'm Vishakaa Satheeshkumar.</h1><br>
+    <p>
       Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.<br>
       Over the next four months before I head off into my second year, I decided to learn how to program my own website using <strong>HTML, CSS, and Javascript</strong>.
-    </h2>
-    
+    </p>
     
   </body>
 </html>
