--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Hi there! I'm Vishakaa Satheeshkumar.</h1><br>
     <p>
       Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.<br>
-      Over the next four months before I head off into my second year, I decided to learn how to program my own website using <strong>HTML, CSS, and Javascript</strong>.
+      Before I head off into my second year, I decided to self-learn how to program my own website using <strong>HTML, CSS, and Javascript</strong> through Github repositories.
     </p>
     
   </body>
