--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <h1>Hi there! I'm Vishakaa Satheeshkumar.</h1><br>
+    <img src="https://photos.app.goo.gl/s9DA36fLAzL2ytAv6">
     <p>
       Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.<br>
       Before I head off into my second year, I decided to self-learn how to program my own website using <strong>HTML, CSS, and Javascript</strong> through Github repositories.
