--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,20 @@
+<!doctype html>
 
+<html>
+  
+  <head>
+    <title>Vishakaa Satheeshkumar</title>
+    
+    <body>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page2.html">About Me</a></li>
+        <li>Blogs</li>
+      </ul>
+      
+      <h2>Blogs</h2>
+      <p>This is where my blogs would be!</p>
+    </body>
+  </head>
+
+</html>
