--- a/page2.html
+++ b/page2.html
@@ -8,12 +8,12 @@
     <body>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">About Me</a></li>
-        <li>Blogs</li>
+        <li>About Me</li>
+        <li><a href="page3.html>Blogs</a></li>
       </ul>
       
-      <h2>Blogs</h2>
-      <p>This is where my blogs would be!</p>
+      <h2>You are are the 'About Me Page'.</h2>
+     
     </body>
   </head>
 
