--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,8 @@
   <body>
     <ul>
       <li>Home</li>
-      <li><a href="page2.html"></a></li>
-      <li><a href="page3.html"></a></li>
+      <li><a href="page2.html">About Me</a></li>
+      <li><a href="page3.html">Blogs</a></li>
     </ul>
     
     <h3>You are at the main page.</h3>
