--- a/pages/page3.html
+++ b/pages/page3.html
@@ -6,8 +6,8 @@
     
   <body>
     <ul>
-      <li><a href="index.html>Home</a></li>
-      <li><a href="page2.html>About Me</a><li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="page2.html">About Me</a><li>
       <li>Blogs</li>
     </ul>
      
