--- a/pages/page2.html
+++ b/pages/page2.html
@@ -6,9 +6,9 @@
     
   <body>
     <ul>
-      <li><a href="index.html>Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li>About Me</li>
-      <li><a href="page3.html>Blogs</a></li>
+      <li><a href="page3.html">Blogs</a></li>
     </ul>
      
     <h3>You are at the 'Blogs' section of my website.</h3>
