--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Vishakaa Satheeshkumar</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
