--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>About Me</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
     
   <body>
     <ul>
