--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
       <li><a href="page3.html">Blogs</a></li>
     </ul>
      
-    <h3>You are at the 'Blogs' section of my website.</h3>
+    <h3>You are at the 'About Me' section of my website.</h3>
   </body>
     
   </head>
