--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1> Welcome!
+    <h1>Welcome!</h1>
     <ul>
       <li>Home</li>
       <li><a href="page2.html">About Me</a></li>
