--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Blogs</title>
-    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
     
   <body>
     <ul>
