--- a/page3.html
+++ b/page3.html
@@ -11,6 +11,8 @@
       <li><a href="page2.html">About Me</a></li>
       <li>Blogs</li>
     </ul>
+    
+    <p> This is where my blogs would be.</p>
   </body>
 
   </head>
