--- a/page2.html
+++ b/page2.html
@@ -6,11 +6,15 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
     
   <body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li>About Me</li>
-      <li><a href="page3.html">Blogs</a></li>
-    </ul> 
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li>About Me</li>
+          <li><a href="page3.html">Blogs</a></li>
+        </ul> 
+      </nav>
+    </header>
   </body>
     
   </head>
