--- a/page3.html
+++ b/page3.html
@@ -6,11 +6,15 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
 
   <body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="page2.html">About Me</a></li>
-      <li>Blogs</li>
-    </ul>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="page2.html">About Me</a></li>
+          <li>Blogs</li>
+        </ul>
+      </nav>
+    </header>
     
     <p> This is where my blogs would be.</p>
   </body>
