--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h1>Welcome!</h1>
     
     <header>
       <nav>
+        h1>Welcome!</h1>
         <ul>
           <li>Home</li>
           <li><a href="page2.html">About Me</a></li>
