--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,7 @@
           <li><a href="page3.html">Blogs</a></li>
         </ul> 
       </nav>
+      <h1>About Me</h1>
     </header>
   </body>
     
