--- a/page3.html
+++ b/page3.html
@@ -14,9 +14,9 @@
           <li>Blogs</li>
         </ul>
       </nav>
+      <h1>Blogs></h1>
     </header>
-    
-    <p> This is where my blogs would be.</p>
+
   </body>
 
   </head>
