--- a/page2.html
+++ b/page2.html
@@ -12,6 +12,7 @@
           <li><a href="index.html">Home</a></li>
           <li>About Me</li>
           <li><a href="page3.html">Blogs</a></li>
+          <li><a href="page4.html">Contact</a></li>
         </ul> 
       </nav>
       <h1>About Me</h1>
