--- a/page3.html
+++ b/page3.html
@@ -10,8 +10,9 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="page2.html">About Me</a></li>
+          <li><a href="page2.html">About</a></li>
           <li>Blogs</li>
+          <li><a href="page4.html">Contact</a></li>
         </ul>
       </nav>
       <h1>Blogs</h1>
