--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>About Me</title>
+    <title>About</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
     
   <body>
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li>About Me</li>
+          <li>About</li>
           <li><a href="page3.html">Blogs</a></li>
           <li><a href="page4.html">Contact</a></li>
         </ul> 
