--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="page2.html">About Me</a></li>
+          <li><a href="page2.html">About</a></li>
           <li><a href="page3.html">Blogs</a></li>
           <li>Contact</li>
         </ul> 
