--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <nav>
         <ul>
           <li>Home</li>
-          <li><a href="page2.html">About Me</a></li>
+          <li><a href="page2.html">About</a></li>
           <li><a href="page3.html">Blogs</a></li>
+          <li><a href="page4.html">Contact</a></li>
         </ul>
       </nav>
       <h1>Home</h1>
