--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       </nav>
       <h1>Home</h1>
     </header>
-    
+   
+    <section>
     <h2>Hi there! I'm Vishakaa Satheeshkumar.</h2><br>
     <p>
       Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.<br>
       Before I head off into my second year, I decided to self-learn how to program my own website using <strong>HTML, CSS, and Javascript</strong> through Github repositories.
     </p>
+    </section>
   </body>
 </html>
