--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
           <li><a href="page4.html">Contact</a></li>
         </ul> 
       </nav>
-      <h1>About Me</h1>
+      <h1>About</h1>
     </header>
   </body>
     
