--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <h1>Home</h1>
     </header>
    
+    <style>
+      header {
+        background-image: url("chemicals.jpg");
+      }
+    </style>
+    
     <section>
     <h2>Hi there! I'm Vishakaa Satheeshkumar.</h2><br>
     <p>
