--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <style>
       header {
         background-image: url("chemicals.jpg");
+        background-size: 100%;
+        background-position: center;
       }
     </style>
     
