--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    
     <style>
       header {
-        background-image: url("chemicalsheader.png");
+        background-image: url("chemicalsheaderimage.jpg");
         background-size: 100%;
         background-position: center;
       }
