--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
   <head>
     <title>About</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/images.css" rel="stylesheet" type="text/css"/>
     
   <body>
     <header>
