--- a/page4.html
+++ b/page4.html
@@ -4,9 +4,16 @@
   <head>
     <title>Contact</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/images.css" rel="stylesheet" type="text/css"/>
-    
+
   <body>
+    <style> 
+      header {
+        background-image: url("chemicalheader.jpg");
+        background-size: 100%;
+        background-position: center;
+      }
+    </style>
+      
     <header>
       <nav>
         <ul>
