--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <title>Vishakaa Satheeshkumar</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/images.css" rel="stylesheet" type="text/css"/>
     
   </head>
 
   <body>
+    <style> 
+      header {
+        background-image: url("chemicalheader.jpg");
+        background-size: 100%;
+        background-position: center;
+      }
+    </style>
     
     <header>
       <nav>
