--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,14 @@
   <head>
     <title>Blogs</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/images.css" rel="stylesheet" type="text/css"/>
+
+    <style> 
+      header {
+        background-image: url("chemicalheader.jpg");
+        background-size: 100%;
+        background-position: center;
+      }
+    </style>
 
   <body>
     <header>
