--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
       Before I head off into my second year, I decided to self-learn how to program my own website using <strong>HTML, CSS, and Javascript</strong> through Github repositories.
     </p>
     </section>
+    
+    <section class = "features">
+      <img src = "me.jpeg" alt="vishakaa satheeshkumar">
+    </section>
+    
   </body>
 </html>
