--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
       </nav>
       <h1>Home</h1>
     </header>
-    
+   
+    <div>
     <p>
     <h2>Hi there! I'm Vishakaa Satheeshkumar.</h2>
     </p>
+    </div>
     
     <section class = "features">
       <img src = "me.jpeg" alt="vishakaa satheeshkumar">
