--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
       <img src = "me.jpeg" alt="vishakaa satheeshkumar">
     </section>
     
+  <section>
     <p>
       Recently, I completed my first year as a <strong>Chemical Engineering</strong> student at <em>Ryerson University</em>.
       Before I head off into my second year, I decided to self-learn how to program my own website using <strong>HTML, CSS, and Javascript</strong> through Github repositories.
     </p>
+  </section>
     
   </body>
 </html>
