--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </div>
     
     <section class = "features">
-      <img src = "me.jpeg" alt="vishakaa satheeshkumar">
+      <figure>
+        <img src = "me.jpeg" alt="vishakaa satheeshkumar">
+      </figure>
     </section>
     
   <section>
