--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa Satheeshkumar | Welcome</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -19,6 +19,7 @@
                     <ul>
                         <li class="current"><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -30,6 +31,18 @@
                 <h1>Creative. Hardworking. Enthusiastic.</h1>
             </div>
         </section>
+
+        <!-- For email subscription on Home Page
+        <section id="newsletter">
+            <div class="container">
+            <h1>Subscribe to our newsletter</h1>
+                <form>
+                    <input type="email" placeholder="Enter Email">
+                    button type="submit" class="button_1">Subscribe</button>
+                </form>
+            </div>
+        </section>
+                -->
 
         <section id="boxes">
             <div class="container">
