--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa Satheeshkumar | About</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -19,6 +19,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li class="current"><a href="about.html">About Me</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -45,6 +46,13 @@
                         If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
                     </p>
                 </article>
+<!--
+                <aside id="sidebar">
+                    <div class="dark"> :::: CREATES THE DARK BORDER AROUND TEXT
+                        <h3>What we do</h3>
+                    </div>
+                </aside>
+-->
 
             </div>
         </section>
