--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa Satheeshkumar | Contact</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -19,6 +19,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li class="current"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -70,6 +71,21 @@
               </aside>
             </div>
           </section>
+      
+
+        <!-- For email subscription on Home Page
+        <section id="newsletter">
+            <div class="container">
+            <h1>Subscribe to our newsletter</h1>
+                <form>
+                    <input type="email" placeholder="Enter Email">
+                    button type="submit" class="button_1">Subscribe</button>
+                </form>
+            </div>
+        </section>
+                -->
+
+
 
         <footer>
             <p>Vishakaa Satheeshkumar, Copyright &copy; 2019</p>
