--- a/about.html
+++ b/about.html
@@ -29,33 +29,41 @@
         <section id="main">
             <div class="container">
                 <article id="main-col">
-                    <h1 class="page-title">About Me</h1>
-                    <p>
+                    <p style="font-size: 18px;">
                         Hey there! I'm Vishakaa Satheeshkumar.
                     </p>
-                    <p>
+                    <p style="font-size: 18px;">
                         Recently, I completed my first year as a <b>Chemical Engineering</b> student at <i>Ryerson University</i>. 
                     </p> 
-                    <p>
+                    <p style="font-size: 18px;">
                         Before I head off into my second year, I decided to self-learn how to program my very own website using <b>HTML, CSS, and Javascript</b> through Visual Studio Code and Github repositories. 
                     </p>
-                    <p>
+
+                    <section id="boxes">
+                        <div class="container">
+                            <div class="box">
+                                <img src="images/html-logo.png">
+                            </div>
+                            <div class="box">
+                                <img src="images/css-logo.png">
+                            </div>
+                            <div class="box">
+                                <img src="images/javascript-logo.jpg">
+                            </div>
+                        </div>
+                    </section>
+                    
+                    <p style="font-size: 18px;">
                         Currently, I am actively seeking any <b>science or engineering related co-op opportunities from May 2020 to August 2020</b>. 
                     </p>
-                    <p>
+                    <p style="font-size: 18px;">
                         If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
                     </p>
                 </article>
-<!--
-                <aside id="sidebar">
-                    <div class="dark"> :::: CREATES THE DARK BORDER AROUND TEXT
-                        <h3>What we do</h3>
-                    </div>
-                </aside>
--->
-
-            </div>
-        </section>
+        
+        <div id="pic">
+            <img class="img-me" src="images/me.JPG" alt="Vishakaa Satheeshkumar">
+        </div>
 
         <footer>
             <p>Vishakaa Satheeshkumar, Copyright &copy; 2019</p>
