--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                 </article>
         
         <div id="pic">
-            <img class="img-me" src="images/me.JPG" alt="Vishakaa Satheeshkumar">
+            <img class="img-me" src="images/me.jpg" alt="Vishakaa Satheeshkumar">
         </div>
 
         <footer>
