--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
         <section id="main">
             <div class="container">
                 <article id="main-col">
-                    <p>
+                    <p style="font-size: 14px;">
                         Hey there! I'm Vishakaa Satheeshkumar.
                     </p>
-                    <p>
+                    <p style="font-size: 14px;">
                         Recently, I completed my first year as a <b>Chemical Engineering</b> student at <i>Ryerson University</i>. 
                     </p> 
-                    <p>
+                    <p style="font-size: 14px;">
                         Before I head off into my second year, I decided to self-learn how to program my very own website using <b>HTML, CSS, and Javascript</b> through Visual Studio Code and Github repositories. 
                     </p>
 
@@ -53,10 +53,10 @@
                         </div>
                     </section>
                     
-                    <p>
+                    <p style="font-size: 14px;">
                         Currently, I am actively seeking any <b>science or engineering related co-op opportunities from May 2020 to August 2020</b>. 
                     </p>
-                    <p>
+                    <p style="font-size: 14px;">
                         If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
                     </p>
                 </article>
