--- a/contact.html
+++ b/contact.html
@@ -31,27 +31,12 @@
             <article id="main-col">
             <h1 class="page-title">Contact</h1>
                 <ul id="contact">
-                  <li>
-                    <h3>Website Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
-                                <p>Pricing: $1,000 - $3,000</p>
-                  </li>
-                  <li>
-                    <h3>Website Maintenance</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
-                                <p>Pricing: $250 per month</p>
-                  </li>
-                  <li>
-                    <h3>Website Hosting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
-                    <p>Pricing: $25 per month</p>
-                  </li>
                 </ul>
               </article>
       
               <aside id="sidebar">
                 <div class="dark">
-                  <h3>Get A Quote</h3>
+                  <h3>Send Me a Message!</h3>
                   <form class="quote">
                                 <div>
                                     <label>Name</label><br>
