--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
                         If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
                     </p>
                 </article>
+            </div>
+        </section>
 
         <footer>
             <p>Vishakaa Satheeshkumar, Copyright &copy; 2019</p>
