--- a/contact.html
+++ b/contact.html
@@ -33,47 +33,11 @@
                 <ul id="contact">
                 </ul>
               </article>
-      
-              <aside id="sidebar">
-                <div class="dark">
-                  <h3>Send Me a Message!</h3>
-                  <form class="quote">
-                                <div>
-                                    <label>Name</label><br>
-                                    <input type="text" placeholder="Name">
-                                </div>
-                                <div>
-                                    <label>Email</label><br>
-                                    <input type="email" placeholder="Email Address">
-                                </div>
-                                <div>
-                                    <label>Message</label><br>
-                                    <textarea placeholder="Message"></textarea>
-                                </div>
-                                <button class="button_1" type="submit">Send</button>
-                          </form>
-                </div>
-              </aside>
-            </div>
-          </section>
-      
-
-        <!-- For email subscription on Home Page
-        <section id="newsletter">
-            <div class="container">
-            <h1>Subscribe to our newsletter</h1>
-                <form>
-                    <input type="email" placeholder="Enter Email">
-                    button type="submit" class="button_1">Subscribe</button>
-                </form>
-            </div>
-        </section>
-                -->
-
-
+  
+<!-- Insert contact form -->
 
         <footer>
-            <p>Vishakaa Satheeshkumar, Copyright &copy; 2019</p>
+            <p>Vishakaa Satheeshkumar, Copyright &copy; 2020</p>
         </footer>
     </body>
 </html>
