--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
                         Hey there! I'm Vishakaa Satheeshkumar.
                     </p>
                     <p style="font-size: 16px;">
-                        Recently, I completed my first year as a <b>Chemical Engineering</b> student at <i>Ryerson University</i>. 
+                        Recently, I completed my second year of <b>Chemical Engineering</b> at <i>Ryerson University</i>. 
                     </p> 
                     <p style="font-size: 16px;">
-                        Before I head off into my second year, I decided to self-learn how to program my very own website using <b>HTML, CSS, and Javascript</b> through Visual Studio Code and Github repositories. 
+                        Before I head off into my third year, I have decided to self-learn how to program my very own website using <b>HTML, CSS, and Javascript</b> through Visual Studio Code and Github repositories. 
                     </p>           
                     <p style="font-size: 16px;">
-                        Currently, I am actively seeking any <b>science or engineering related co-op opportunities from May 2020 to August 2020</b>. 
+                        Currently, I am actively seeking any <b>science or engineering related co-op opportunities from September 2020 to December 2020</b>. 
                     </p>
                     <p style="font-size: 16px;">
                         If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
