--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                         Hey there! I'm Vishakaa Satheeshkumar.
                     </p>
                     <p style="font-size: 16px;">
-                        Recently, I completed my second year of <b>Chemical Engineering</b> at <a href="">Ryerson University</a>. 
+                        Recently, I completed my second year of <b>Chemical Engineering</b> at <a href="https://www.ryerson.ca/chemical/">Ryerson University</a>. 
                     </p> 
                     <p style="font-size: 16px;">
                         Before I head off into my third year, I have decided to self-learn how to program my very own website using <b>HTML, CSS, and Javascript</b> through Visual Studio Code and Github repositories. 
