--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li class="current"><a href="about.html">About Me</a></li>
+                        <li><a href="projects.html">Contact</a></li>
                         <li><a href="blogs.html">Blogs</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,7 +42,7 @@
                         Currently, I am actively seeking any <b>science or engineering related co-op opportunities from September 2020 to December 2020</b>. 
                     </p>
                     <p style="font-size: 16px;">
-                        If you find that my qualifications meet your requirements for an available position, head over to the <b><i>Contact</i></b> section of my website to send me a message via email!
+                        If you find that my qualifications meet your requirements for an available position, head over to my <a href="http://www.linkedin.com/in/vishakaasatheeshkumar">LinkedIn</a> to send me a message!
                     </p>
                 </article>
             </div>
