--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li class="current"><a href="about.html">About Me</a></li>
-                        <li><a href="projects.html">Contact</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="blogs.html">Blogs</a></li>
                     </ul>
                 </nav>
