--- a/blog2.html
+++ b/blog2.html
@@ -19,8 +19,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li class="current"><a href="blogs.html">Blogs</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
