--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Hey there! I'm Vishakaa Satheeshkumar.">
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
-        <title>Vishakaa Satheeshkumar | Contact</title>
+        <title>Vishakaa Satheeshkumar | Projects</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -19,8 +19,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
+                        <li class="current"><a href="projects.html">Projects</a></li>
                         <li><a href="blogs.html">Blogs</a></li>
-                        <li class="current"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -29,8 +29,8 @@
     <section id="main">
         <div class="container">
             <article id="main-col">
-            <h1 class="page-title">Contact</h1>
-                <ul id="contact">
+            <h1 class="page-title">Projects</h1>
+                <ul id="projects">
                 </ul>
               </article>
   
