--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Hey there! I'm Vishakaa Satheeshkumar.">
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
-        <title>Vishakaa Satheeshkumar | Welcome</title>
+        <title>Vishakaa S | Welcome</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -19,8 +19,8 @@
                     <ul>
                         <li class="current"><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="blogs.html">Blogs</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
