--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Hey there! I'm Vishakaa Satheeshkumar.">
         <meta name="keywords" content="chemical, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
-        <title>Vishakaa Satheeshkumar | Blogs</title>
+        <title>Vishakaa S | Blogs</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
