--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width">
+        <meta name= "viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "Check out my blogs:">
         <meta name= "keywords" content= "blogs, engineering, student, sales">
         <meta name="author" content="Vishakaa Satheeshkumar">
