--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta name= "viewport" content="width=device-width, initial-scale=1.0">
-        <meta name= "description" content= "Check out my blogs:">
-        <meta name= "keywords" content= "blogs, engineering, student, sales">
+        <meta name= "description" content= "Check out my projects:">
+        <meta name= "keywords" content= "engineering, student, innovation, research">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa S | Projects</title>
         <link rel="stylesheet" href="css/style.css">
@@ -41,7 +41,7 @@
             <h4>Request for Proposal: Accessibility on Demand</h4>
             <small>January to April 2020</small>
             <h4>Reverse Engineering: Pill Buzz</h4>
-            <small>September to December 2020</small>
+            <small>September to December 2018</small>
             <h4>Cross-Curricular: Electrolyis of Water for Hydrogen Fuel Cells</h4>
             <small>January to April 2018</small>
         </article>
