--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <div class="container">
         <article id="description">
             <h2>About Me</h2>
-            <p>Hey there, my name is <em>Vishakaa Satheeshkumar 🙋🏽‍♀️ </em>
+            <p>Hey there, my name is <strong><a href="vishakaas.github.io">Vishakaa Satheeshkumar 🙋🏽‍♀️ </a></stong>
             <p>Recently, I've completed my second year of Chemical Engineering 👩🏽‍🔬‍ at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 📚</a></strong></p>
             <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML, CSS, and Javascript through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
             <p>Currently, I'm actively seeking any engineering related co-op opportunities from <em>September to December 2020 🔍</em></p>
