--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
     <!--Responsive Web Design-->
-        <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "Hey there! I'm Vishakaa Satheeshkumar.">
         <meta name= "keywords" content= "chemical, engineering, student">
         <meta name= "author" content= "Vishakaa Satheeshkumar">
+                <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Vishakaa S</title>
         <link rel="stylesheet" href="css/style.css">
@@ -20,8 +21,8 @@
     </div>
     <div class = "logos">
         <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-        <i class="fa fa-at" style="font-size:36px"></i>
-        <a href="https://github.com/vishakaas" i class="fa fa-github" style="font-size:36px"></a></i>
+        <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+        <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
 </div>
 </header>
             
@@ -46,12 +47,6 @@
     <div class="container">
        <!--<p> Hey there! My name is <strong>Vishakaa Satheeshkumar</strong>. </p>-->
     </div>
-</section>
-
-<!--Image-->
-<!--<div class = "box">
-    <img src="images/me.jpg" alt="Personal Picture"> <br>   
-</div>-->
 </section>
 </body>
 
