--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,10 @@
         <meta name= "description" content= "Check out my projects:">
         <meta name= "keywords" content= "engineering, student, innovation, research">
         <meta name="author" content="Vishakaa Satheeshkumar">
-        <title>Vishakaa S | Projects</title>
-        <link rel="stylesheet" href="css/style.css">
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Vishakaa S | Projects</title>
     </head>
 
 <body>
@@ -18,8 +19,8 @@
         </div>
         <div class = "logos">
             <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-            <i class="fa fa-at" style="font-size:36px"></i>
-            <a href="https://github.com/vishakaas" i class="fa fa-github" style="font-size:36px"></a></i>
+            <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+            <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
     </div>
     </header>
 
