--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
        <!--<p> Hey there! My name is <strong>Vishakaa Satheeshkumar</strong>. </p>-->
     </div>
 </section>
+
+<section id="box">
+    <div class="container">
+    </div>
+</section>
 </body>
 
 <footer>
