--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
     <!--Responsive Web Design-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <meta name= "description" content= "Hey there! I'm Vishakaa Satheeshkumar.">
         <meta name= "keywords" content= "chemical, engineering, student">
         <meta name= "author" content= "Vishakaa Satheeshkumar">
+        <title>Vishakaa S</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>Vishakaa S</title>
     </head>
 
 <body>
@@ -38,24 +39,15 @@
 </nav>
 
 <!--Section: Content-->
-<section id="showcase">
-    <div class="container">
-        <h1>Creative. <br> Hardworking. <br> Enthusiastic.</h1>
-    </div>
-
-<section>
-    <div class="container">
-       <!--<p> Hey there! My name is <strong>Vishakaa Satheeshkumar</strong>. </p>-->
-    </div>
-</section>
-
-<section id="box">
-    <div class="container">
-    </div>
-</section>
-</body>
+    <section id="showcase">
+        <div class ="container">
+                <h1>Creative 💭 <br> Hardworking ✍🏽 <br> Enthusiastic ✨</h1>
+        </div>
+    </section>
 
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
 </footer>
+
+</body>
 </html>
