--- a/about.html
+++ b/about.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "Check out my blogs:">
         <meta name= "keywords" content= "blogs, engineering, student, sales">
         <meta name="author" content="Vishakaa Satheeshkumar">
+        <title>Vishakaa S | About Me</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>Vishakaa S | About Me</title>
+        <link rel="stylesheet" href="css/debug.css">
     </head>
 
 <body>
@@ -39,11 +40,11 @@
     <div class="container">
         <article id="description">
             <h2>About Me</h2>
-            <p>Hey there, my name is <strong><a href="vishakaas.github.io">Vishakaa Satheeshkumar 🙋🏽‍♀️ </a></strong>
-            <p>Recently, I've completed my second year of Chemical Engineering 👩🏽‍🔬‍ at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 📚</a></strong></p>
+            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
+            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
             <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML, CSS, and Javascript through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
-            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <em>September to December 2020 🔍</em></p>
-            <p>If you find that my qualifications meet your requirements for an available position, head over to my LinkedIn to send me a message! 📨</p>
+            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
+            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
         </article>
     </div>
 </section>
@@ -51,4 +52,6 @@
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
 </footer>
+
+</body>
 </html>
