--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "Check out my projects:">
-        <meta name= "keywords" content= "engineering, student, innovation, research">
+        <meta name= "keywords" content= "blogs, engineering, student">
         <meta name="author" content="Vishakaa Satheeshkumar">
+        <title>Vishakaa S | Projects</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>Vishakaa S | Projects</title>
     </head>
 
 <body>
@@ -39,12 +39,12 @@
     <div class="container">
         <article id="item">
             <h2>Projects</h2>
-            <h4>Request for Proposal: Accessibility on Demand</h4>
+            <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
             <small>January to April 2020</small>
-            <h4>Reverse Engineering: Pill Buzz</h4>
+            <h4><a href="../projects/pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
             <small>September to December 2018</small>
-            <h4>Cross-Curricular: Electrolyis of Water for Hydrogen Fuel Cells</h4>
-            <small>January to April 2018</small>
+            <!--<h4><a href="../projects/cross.html">Cross-Curricular: Electrolysis of Water for Hydrogen Fuel Cells</a></h4>
+            <small>January to April 2018</small>-->
         </article>
     </div>
 </section>
@@ -52,4 +52,6 @@
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
 </footer>
+
+</body>
 </html>
