--- a/index.html
+++ b/index.html
@@ -14,23 +14,11 @@
     </head>
 
 <body>
-
-<!--Header: Logos, Social Media Links-->
-<header id="main-header" class="alt">
-    <div class= "container">
-        <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-    </div>
-    <div class = "logos">
-        <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-        <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-        <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-</div>
-</header>
             
 <!--Nav: Navigation/Menu Bar-->
 <nav id=menu>
     <div class = "container">
-        <ul class=links>
+        <ul class="links">
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -38,11 +26,21 @@
     </div>
 </nav>
 
+<header>
+    <h2>Creative 💭 Hardworking ✍🏽 Compassionate 😊</h2>
+</header>
+
 <!--Section: Content-->
     <section id="showcase">
-        <div class ="container">
-                <h1>Creative 💭 <br> Hardworking ✍🏽 <br> Enthusiastic ✨</h1>
-        </div>
+        <div class="box">
+            <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
+            <h1>Vishakaa Satheeshkumar</h1>
+            <h5>Chemical Engineering Student</h5>
+        <ul>
+            <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
+            <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
+            <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
+        </ul>
     </section>
 
 <footer>
