--- a/about.html
+++ b/about.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <!--Responsive Web Design-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="UTF-8">
-        <meta name= "description" content= "Hey there! I'm Vishakaa Satheeshkumar.">
-        <meta name= "keywords" content= "chemical, engineering, student">
-        <meta name= "author" content= "Vishakaa Satheeshkumar">
-        <title>Vishakaa S</title>
+        <meta name= "description" content= "Check out my blogs:">
+        <meta name= "keywords" content= "blogs, engineering, student, sales">
+        <meta name="author" content="Vishakaa Satheeshkumar">
+        <title>Vishakaa S | About Me</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
     </head>
 
 <body>
-            
-<!--Nav: Navigation/Menu Bar-->
-<nav id="menu">
-    <div class = "container">
-        <ul class="links">
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="projects.html">Projects</a></li>
-        </ul>
-    </div>
-</nav>
 
-
-<!--Section: Content-->
-    <section id="showcase">
-        <div class="box">
-            <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
+    <header id="main-header" class="alt">
+        <div class= "container">
             <h1>Vishakaa Satheeshkumar</h1>
-            <h5>Chemical Engineering Student</h5>
-            <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
-            
-            <ul>
-            <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
-            <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
-            <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
+        </div>
+        <div class = "logos">
+            <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
+            <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+            <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+    </div>
+    </header>
+
+    <nav id="menu">
+        <div class = "container">
+            <ul class=links>
+                <li><a href="index.html">Home</a></li>
+                <li class="currrent"><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </div>
-    </section>
+    </nav>
+
+<!--Main Area of the Page-->
+<section>
+    <div class="container">
+        <article id="description">
+            <h2>About Me</h2>
+            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
+            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
+            <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
+            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
+            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
+        </article>
+    </div>
+</section>
 
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
