--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
             
 <!--Nav: Navigation/Menu Bar-->
-<nav id=menu>
+<nav id="menu">
     <div class = "container">
         <ul class="links">
             <li class="current"><a href="index.html">Home</a></li>
@@ -26,9 +26,6 @@
     </div>
 </nav>
 
-<header>
-    <h2>Creative 💭 Hardworking ✍🏽 Compassionate 😊</h2>
-</header>
 
 <!--Section: Content-->
     <section id="showcase">
@@ -36,11 +33,14 @@
             <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
             <h1>Vishakaa Satheeshkumar</h1>
             <h5>Chemical Engineering Student</h5>
-        <ul>
+            <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
+            
+            <ul>
             <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
             <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
             <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
-        </ul>
+            </ul>
+        </div>
     </section>
 
 <footer>
