--- a/projects.html
+++ b/projects.html
@@ -14,18 +14,18 @@
 <body>
 
     <header id="main-header" class="alt">
-        <div class= "container">
+        <div class="container">
             <h1><strong>Vishakaa Satheeshkumar</strong></h1>
         </div>
-        <div class = "logos">
+        <div class="logos">
             <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
             <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
             <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
     </div>
     </header>
 
-    <nav id=menu>
-        <div class = "container">
+    <nav id="menu">
+        <div class="container">
             <ul class=links>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
