--- a/projects.html
+++ b/projects.html
@@ -8,13 +8,13 @@
         <title>Vishakaa S | Projects</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
     </head>
 
 <body>
 
     <header id="main-header" class="alt">
-        <div class="container">
+        <div class= "container">
             <h1><strong>Vishakaa Satheeshkumar</strong></h1>
         </div>
         <div class="logos">
