--- a/aod.html
+++ b/aod.html
@@ -8,7 +8,7 @@
         <title>Vishakaa S | Request for Proposal</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
     </head>
 
 <body>
