--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     </div>
     </header>
 
-    <nav id=menu>
+    <nav id="menu">
         <div class="container">
             <ul class=links>
                 <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
             <h2>Projects</h2>
             <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
             <small>January to April 2020</small>
-            <h4><a href="../projects/pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
+            <h4><a href="pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
             <small>September to December 2018</small>
             <!--<h4><a href="../projects/cross.html">Cross-Curricular: Electrolysis of Water for Hydrogen Fuel Cells</a></h4>
             <small>January to April 2018</small>-->
