--- a/about.html
+++ b/about.html
@@ -14,19 +14,21 @@
 <body>
 
     <header id="main-header" class="alt">
-        <div class= "container">
-            <h1>Vishakaa Satheeshkumar</h1>
-        </div>
-        <div class = "logos">
-            <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-            <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-            <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-    </div>
+        <div class="wrapper">
+            <div class="container">
+                <h1>Vishakaa Satheeshkumar</h1>
+            </div>
+            
+            <div class="logos">
+                <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
+                <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+            </div>
     </header>
 
     <nav id="menu">
-        <div class = "container">
-            <ul class=links>
+        <div class="container">
+            <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li class="currrent"><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -51,6 +53,7 @@
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
 </footer>
+    </div>  
 
 </body>
 </html>
