--- a/projects.html
+++ b/projects.html
@@ -14,19 +14,21 @@
 <body>
 
     <header id="main-header" class="alt">
-        <div class="container">
-            <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-        </div>
-        <div class = "logos">
+        <div class="wrapper">
+            <div class= "container">
+                <h1><strong>Vishakaa Satheeshkumar</strong></h1>
+            </div>
+
+        <div class="logos">
             <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
             <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
             <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-    </div>
+        </div>
     </header>
 
     <nav id="menu">
         <div class="container">
-            <ul class=links>
+            <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li class="current"><a href="projects.html">Projects</a></li>
@@ -52,6 +54,7 @@
 <footer>
     <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
 </footer>
+    </div>
 
 </body>
 </html>
