--- a/aod.html
+++ b/aod.html
@@ -12,7 +12,7 @@
     </head>
 
 <body>
-    <body>
+    <div class="wrapper">
         <header id="main-header" class="alt">
             <div class= "container">
                 <h1><strong>Vishakaa Satheeshkumar</strong></h1>
@@ -36,19 +36,24 @@
 
         <section>
             <div class="container">
-                <h2>Request for Proposal: Accessibility on Demand</h2>
+                <h2>Accessibility on Demand</h2>
             </div>
                 <article>
                     <div class="container">
-                    The Major Research Project asked us to design an accessible immersive learning space on campus that accommodates up to 100 learners with diverse abilities. The new and improved classroom would provide simple mobility to, within, and from the learning space, but also present information in multiple modalities to ensure a comfortable and fair learning experience. <strong>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</strong><br><br>
-                    Accessibility is a major concern for design consultants, technologists, and engineers in modern-day project developments. A key factor that is often overlooked when planning for people with disabilities is whether or not the user “blends in” or appears “invisible” along with everyone else. <br><br>
-                    Accessibility on Demand incorporates accessible methods into new buildings to make Ontario barrier-free for those with disabilities. When such learning spaces exist in post-secondary institutions, students with disabilities will perform better academically and gain motivation to pursue further education. Simple accommodations for disabled students can better the campus from a diverse social and economic aspect. The user/design, ethical, political, cultural, and business impacts along with the final work plan were thoroughly researched to reach the final design.
-                    </div>
+                    <p>
+                        I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities. 
+                        We represented Accessibility on Demand, a design firm, that advocates and incorporates vital accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario barrier-free.
+                        The user/design, ethical, political, cultural, and business impacts along with the final work plan were thoroughly researched to reach the final design. <br><br>
+                        <em>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em>
+                    </p>
+                </div>
                 </article>
         </section>
 
         <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
-    </body>
+    </div>
+
+</body>
 </html>
