--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -45,7 +45,7 @@
                         <p> 
                             I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.
                             An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill. 
-                            The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design. <br><br>
+                            The bill of materials, evaluation, and redesign scheme were thoroughly researched to decide upon the final design. <br><br>
                             <em>Our group received 97% on the final project.</em>
                         </p>
                     </div>
