--- a/aod.html
+++ b/aod.html
@@ -42,8 +42,8 @@
                     <div class="container">
                     <p>
                         I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities. 
-                        We represented Accessibility on Demand, a design firm, that advocates and incorporates vital accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario barrier-free.
-                        The user/design, ethical, political, cultural, and business impacts along with the final work plan were thoroughly researched to reach the final design. <br><br>
+                        We represented Accessibility on Demand, a design firm, who implements accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario to barrier-free conditions.
+                        The user/design, ethical, political, cultural, and business impacts were thoroughly researched to reach the final design. <br><br>
                         <em>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em>
                     </p>
                 </div>
