--- a/aod.html
+++ b/aod.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <h2>Accessibility on Demand</h2>
             </div>
-                <article>
+                <article id="text">
                     <div class="container">
                     <p>
                         I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities. 
