--- a/index.html
+++ b/index.html
@@ -26,25 +26,24 @@
     </nav>
 
 
-<!--Section: Content-->
-    <section id="showcase">
-        <div class="box">
-            <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
-            <h1>Vishakaa Satheeshkumar</h1>
-            <h5>Chemical Engineering Student</h5>
-            <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
-            
-            <ul>
-            <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
-            <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
-            <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
-            </ul>
-        </div>
-    </section>
+<!--Main Area of the Page-->
+    <main>
+            <div class="box">
+                <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
+                <h1>Vishakaa Satheeshkumar</h1>
+                <h5>Chemical Engineering Student</h5>
+                <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
+                
+                <ul>
+                <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
+                <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
+                <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
+                </ul>
+            </div>
+    </main>
 
-<footer>
-    <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-</footer>
-
+    <footer>
+        <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
+    </footer>
 </body>
 </html>
