--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                             <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
                             <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
-                            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
+                            <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message via LinkedIn! 📨</p>
                     </article>
                 <!--</div>-->
             </section>    
