--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -47,9 +47,9 @@
             </section>    
         </main>   
 
-        <footer>
+        <!--<footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-        </footer>
+        </footer>-->
     </div>
 </body>
 </html>
