--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
             </section>    
         </main>
 
-        <footer>
+        <footer class="push">
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>
