--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    <!--Responsive Web Design-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name= "description" content= "Hey there! I'm Vishakaa Satheeshkumar.">
+        <meta name= "keywords" content= "chemical, engineering, student">
+        <meta name= "author" content= "Vishakaa Satheeshkumar">
+        <title>Vishakaa S</title>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
+<body>
+<!--Nav: Navigation/Menu Bar-->
+    <nav id="menu">
+        <div class = "container">
+            <ul class="links">
+                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </div>
+    </nav>
+
+
+<!--Main Area of the Page-->
+    <main>
+            <div class="box">
+                <img src="images/img-1.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
+                <h1>Vishakaa Satheeshkumar</h1>
+                <h5>Chemical Engineering Student</h5>
+                <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
+                
+                <ul>
+                <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
+                <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
+                <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
+                </ul>
+            </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
+    </footer>
+</body>
+</html>
