--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -48,9 +48,9 @@
             </section>    
         </main>   
 
-        <!--<footer>
+        <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-        </footer>-->
+        </footer>
     </div>
 </body>
 </html>
